--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,95 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+
+:root.theme-light{
+  --main-font:"Inter";
+  --accent-font: "PressStart2P";
+  --base-font-weight: 400;
+  --header-font-weight:700;
+  
+  --main-text-color: #000;
+  --main-bg-color:#fff;
+  --background-stripes:  repeating-linear-gradient(
+    to right,
+    #d3d3d3,
+    #d3d3d3 2px,
+    transparent 2px,
+    transparent 4px),
+    repeating-linear-gradient(
+    to bottom,
+    #d3d3d3,
+    #d3d3d3 2px,
+    transparent 2px,
+    transparent 4px
+    ),
+    linear-gradient( #e7e7e7 0%, #e7e7e7 0.1%, #1a1a1a 100% );;
+  --watermark-stroke:#fff;
+  --heart-stroke: #000;
+  --heart-bg: #f00;
+  --heart-full:#000;
+  --like-button: #ffffff;
+}
+
+:root.theme-dark{
+  --main-font:"Inter";
+  --accent-font: "PressStart2P";
+  --base-font-weight: 465;
+  --header-font-weight:785;
+  --main-text-color: #00CC14;
+  --main-bg-color: #000;
+  --background-stripes:  repeating-linear-gradient(
+    to right,
+    #000,
+    #000 2px,
+    transparent 2px,
+    transparent 4px),
+    repeating-linear-gradient(
+    to bottom,
+    #000,
+    #000 2px,
+    transparent 2px,
+    transparent 4px
+    ),
+    linear-gradient(to bottom,#007f0c, #004306);
+  --watermark-stroke:#000;
+  --heart-stroke: #00cc14;
+  --heart-bg: #f00;
+  --heart-full:#00cc14;
+  --like-button: #00cc14;
+
+}
+
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-font:"Inter";
+    --accent-font: "PressStart2P";
+    --base-font-weight: 465;
+    --header-font-weight:785;
+    
+    --main-text-color: #00CC14;
+    --main-bg-color: #000;
+    --background-stripes:  repeating-linear-gradient(
+      to right,
+      #000,
+      #000 2px,
+      transparent 2px,
+      transparent 4px),
+      repeating-linear-gradient(
+      to bottom,
+      #000,
+      #000 2px,
+      transparent 2px,
+      transparent 4px
+      ),
+      linear-gradient(to bottom,#007f0c, #004306);
+    --watermark-stroke:#000;
+      --heart-stroke: #00cc14;
+  --heart-bg: #f00;
+  --heart-full:#00cc14;
+  --like-button: #00cc14;
+  }
+
+}
