--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,100 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+@keyframes arrow_moves {
+    0% {
+      right: 0px;
+    }
+    50% {
+      right: 4px;
+    }
+    100% {
+      right: 0px;
+    }
+  }
+  @keyframes like-icon-sparks {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes heart-big {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1.15);
+    }
+  }
+  
+  .like-icon {
+    height: 100%;
+  }
+  
+  .sparks {
+    opacity: 0;
+  }
+  
+  .core {
+    fill: transparent;
+    transition: fill 0.3s linear;
+    transition-delay: 0.3s;
+  }
+  
+  .main-body {
+    fill: transparent;
+    transition: fill 0.3 linear;
+  }
+  
+  .like-icon.is-liked .countour {
+    fill: var(--heart-fill);
+    transition: fill 0.3 linear;
+    transition-delay: 0.5s;
+  }
+  
+  .like-icon:hover .core {
+    fill: var(--main-text-color);
+    cursor: pointer;
+  }
+  .like-icon:active .core {
+    transition-delay: 0s;
+    fill: var(--heart-fill);
+  }
+  
+  .like-icon.is-liked .core {
+    transition-delay: 0s;
+    fill: var(--heart-fill);
+  }
+  .like-icon .core {
+    transition-delay: 0s;
+    transition: fill 0s linear;
+  }
+  
+  .like-icon:hover .main-body {
+    fill: var(--main-text-color);
+    cursor: pointer;
+    transition-delay: 0.05s;
+  }
+  .like-icon:active .main-body {
+    transition-delay: 0.05s;
+    fill: var(--heart-fill);
+  }
+  .like-icon.is-liked .main-body {
+    transition-delay: 0.05s;
+    fill: var(--heart-fill);
+  }
+  .like-icon .main-body {
+    transition-delay: 0s;
+    transition: fill 0s linear;
+  }
+  .like-icon.is-liked .sparks {
+    animation: like-icon-sparks 0.3s ease-in 0.3s 1 alternate;
+  }
+  
+  .like-icon.is-liked .heart {
+    animation: heart-big 0.3s ease-in 0.1s 1 alternate;
+    transform-origin: center;
+  }
+  
