--- a/styles/style.css
+++ b/styles/style.css
@@ -16,58 +16,56 @@
 */
 
 .page {
-  min-inline-size: 375px;
-  max-inline-size: 700px;
-  width: clamp(375px, 50%, 700px); 
-  margin-left: auto;
+  width: clamp(375px, 70%, 700px);
   margin-right: auto;
+  margin-left: auto;
   font-family: var(--main-font), sans-serif;
   background: var(--background-stripes);
   background-size: cover;
   background-attachment: fixed;
-
+  min-inline-size: 375px;
+  max-inline-size: 700px;
+  font-variation-settings: "wght" var(--base-font-weight);
 }
 
-.header{
-  margin: 6.25rem 0;
-  font-family: var(--accent-font), monospace;
-  font-weight: bold;
-  border: 2px solid var(--main-text-color);
-  background-color: var(--main-bg-color);
+.header {
   display: grid;
   grid-template-columns: 1fr;
   align-items: center;
+  margin: 100px 0;
+  border: 2px solid var(--main-text-color);
+  font-family: var(--accent-font), fantasy;
+  font-weight: bold;
+  background-color: var(--main-bg-color);
 }
 
-.logo-group{
+.logo-group {
   justify-self: center;
   align-self: center;
-  padding:  clamp(7.5rem, 32%, 8.5rem) clamp(0.875rem, 0.037%, 7.53125rem) 0;
+  padding: clamp(7.5rem, 32%, 8.5rem) clamp(0.875rem, 0.037%, 7.53125rem) 0;
   text-align: center;
- 
 }
-h1{
+a.logo {
+  color: var(--main-text-color);
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
-  color:var(--main-text-color);
   line-height: 1em;
 }
-.subheader{
-  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
-  color:var(--main-text-color);
-  text-transform: uppercase;
+h1 {
   padding-top: 20px;
-
+  color: var(--main-text-color);
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-transform: uppercase;
 }
-.theme-menu{
+.theme-menu {
   justify-self: center;
   width: min-content;
-  padding: 25px 0;
+  padding: 25px 0 21px;
   color: var(--main-text-color);
 }
-.theme-menu__list{
+.theme-menu__list {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 10px;
+  gap: 6px;
 }
 .theme-menu__item {
   position: relative;
@@ -75,16 +73,20 @@ h1{
 }
 .theme-menu__button {
   border: none;
-  transition: opacity 0.3s;
-  animation-timing-function: ease-in-out;
   color: var(--main-text-color);
+  font-size: 14px;
+  line-height: 1em;
   text-transform: uppercase;
   background-color: transparent;
+  transition: opacity 0.3s;
+  animation-timing-function: ease-in-out;
   cursor: pointer;
-  font-size: 14px;      
-  line-height: 1em;
 }
-.theme-menu__button:disabled{
+.theme-menu__button::before {
+  content: "";
+  padding: 0;
+}
+.theme-menu__button:disabled {
   opacity: 0.6;
   pointer-events: none;
 }
@@ -100,170 +102,174 @@ h1{
 }
 
 .theme-menu__button:disabled::before {
-  position: absolute;
-  top:2px;
-  left:-90px;
   content: "▶";
+  position: absolute;
+  top: 2px;
+  left: -90px;
   color: var(--main-text-color);
-  animation: arrow_moves 0.5s infinite;
-  animation-duration: alternate;
-  animation-timing-function: ease-in-out;
   font-size: 1em;
   line-height: 1em;
+  animation: arrow_moves 0.5s infinite;
+  animation-timing-function: ease-in-out;
+  animation-duration: alternate;
 }
-main li{
-  margin-bottom:50px;
+.theme-menu__button::after {
+  content: "";
+  display: block;
+  width: 0%;
+  height: 2px;
+  margin-top: 2px;
+  background-color: var(--main-text-color);
+  transition: width 300ms ease-in, background-color 1s;
 }
-main article{
-  background-color: var(--main-bg-color);
-  border: 2px solid var(--main-text-color);
+
+.theme-menu__button:focus-visible::after {
+  width: 100%;
+  background-color: var(--main-text-color);
+}
+
+main li {
+  margin-bottom: 50px;
+
+  min-inline-size: 375px;
+  max-inline-size: 700px;
+
+}
+main article {
   display: grid;
   grid-template-columns: 1fr;
+  border: 2px solid var(--main-text-color);
+  background-color: var(--main-bg-color);
 }
-article h2{
-  font-size: 18px;
-  height:31px;
-  line-height: 31px;
-  padding-left: 10px;
-  font-weight: var( --header-font-weight);
+article h2 {
+  min-height: 33px;
   border-bottom: 2px solid var(--main-text-color);
   color: var(--main-text-color);
+  font-variation-settings: "wght" var(--header-font-weight);
+  font-size: 18px;
+  line-height: 21.78px;
+  padding: 5px 10px 3px;
 }
-article img{
-  inline-size: 100%;
-  block-size: 100%;
+article img {
   object-fit: cover;
   overflow: hidden;
+  inline-size: 100%;
+  block-size: 100%;
 }
-article .content{
-  border-top: 2px solid var(--main-text-color);
-  padding: 25px;
+article .content {
   display: grid;
-  
+  border-top: 2px solid var(--main-text-color);
+  padding: 25px 25px 0px 25px;
 }
-article p{
+article p {
   display: block;
+  padding-bottom: 25px;
   color: var(--main-text-color);
   font-size: 18px;
   line-height: 21px;
-  padding-bottom: 25px;
 }
 
 article .card__icon-button {
-  background-color: transparent;
+  border: none;
   padding: 0;
   color: transparent;
+  background-color: transparent;
   transition: color 0.3s ease;
-  outline: 2px solid;
-  border: none;
-}
-article .card__icon-button:focus-visible {
-  color: var(--main-text-color);
-  outline: 2px solid var(--main-text-color);
 }
 
-article .card__like-button{
-  justify-self:end;
-  position: relative;
+article .card__icon-button:focus-visible {
+  outline: 2px solid var(--main-text-color);
+  color: var(--main-text-color);
+}
+
+article .card__like-button {
+  justify-self: end;
   align-content: end;
-  font-family: var(--accent-font), monospace;
-  cursor: pointer;
-  block-size: 38px;
-  inline-size: 130px;
   font-size: 14px;
   line-height: 30px;
-  text-transform:capitalize;
-  background-color: var(--main-bg-color);
-  color: var(--main-text-color);
-  transition: box-shadow 0.5s ease-in-out;
-  overflow: hidden;
+  text-transform: capitalize;
+  block-size: 38px;
+  inline-size: 130px;
 }
 
-
 article .card__like-button::after {
-  mix-blend-mode: difference;
-  content: '';
+  content: "";
   position: absolute;
-  transform: scaleX(0);
-  block-size: 55px;
-  inline-size: 130px;
-  bottom: -16px;
   right: -100%;
+  bottom: -16px;
   left: 0;
   background-color: var(--like-button);
-  transform-origin: left;
   transition: transform 0.5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+  mix-blend-mode: difference;
+  block-size: 55px;
+  inline-size: 130px;
 }
 
 article .card__like-button:hover::after {
+  right: 0;
+  background-color: var(--like-button);
   transform: scaleX(1);
   transform-origin: left;
-  background-color: var(--like-button);
-  right:0;
 }
 
-article .illustration{
+article .illustration {
   position: relative;
 }
 
 
-.watermark{
-  font-family: var(--accent-font), monospace;
+.watermark {
   position: absolute;
-  font-size: 14px;
-  mix-blend-mode:hard-light;
+  text-transform: uppercase;
+  top: 25px;
+  right: 25px;
   opacity: 0.5;
-  top:25px;
-  right: 13px;
-  text-shadow:
-    -1px 0 var(--watermark-stroke), 
-   0 1px var(--watermark-stroke), 
-   1px 0 var(--watermark-stroke), 
-   0 -1px var(--watermark-stroke);
-
+  color: var(--main-text-color);
+  font-family: var(--accent-font), fantasy;
+  font-size: 14px;
+  text-shadow: -1px 0 var(--watermark-stroke), 0 1px var(--watermark-stroke),
+    1px 0 var(--watermark-stroke), 0 -1px var(--watermark-stroke);
+  mix-blend-mode: hard-light;
+  z-index: 1;
 }
 
-
-@supports((text-stroke: 1px var(--watermark-stroke)) or (-webkit-text-stroke: 1px var(--watermark-stroke))) {
+@supports (
+  (text-stroke: 1px var(--watermark-stroke)) or
+    (-webkit-text-stroke: 1px var(--watermark-stroke))
+) {
   .watermark {
-        font-family: var(--accent-font), monospace;
-        color: var(--main-text-color);
-        position: absolute;
-        opacity: 0.5;
-        font-size: 14px;
-        mix-blend-mode:hard-light;
-        top:25px;
-        right: 25px;
-        -webkit-text-stroke: 1px var(--watermark-stroke);
-        text-stroke: 1px var(--watermark-stroke);
-        text-shadow: none;
-    }
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--watermark-stroke);
+    text-stroke: 1px var(--watermark-stroke);
+  }
 }
-
 
 .button-block {
   display: grid;
-  grid-template-columns: min-content  min-content;
+  grid-template-columns: min-content min-content;
   justify-content: end;
-  gap: 8px;
   align-items: center;
-  padding-block-end: 25px;
+  gap: 8px;
   padding-inline-end: 25px;
+  padding-block-end: 25px;
+
 }
 /*- Кнопки ------------------------------------------------- */
 .button {
-  display: grid;
   position: relative;
+  display: grid;
   justify-content: center;
   align-items: center;
-  background-color: var(--main-bg-color);
   border: none;
   outline: 2px solid var(--main-text-color);
-  font-family: var(--accent-font), sans-serif;
-  transition: box-shadow 0.5s;
-  cursor: pointer;
   overflow: hidden;
+  font-family: var(--accent-font), fantasy;
   font-weight: 400;
+  background-color: var(--main-bg-color);
+  transition: box-shadow 0.5s ease-in-out;
+  cursor: pointer;
+  color: var(--main-text-color);
 }
 .button:focus {
   border: none;
@@ -274,99 +280,93 @@ article .illustration{
   outline: 2px solid var(--main-text-color);
 }
 .button span {
-  z-index: 1;
   position: relative;
-  font-size: 14px;
+  z-index: 1;
   color: var(--like-button);
+  font-size: 14px;
   mix-blend-mode: difference;
 }
 .button::after {
-  content: '';
+  content: "";
+  position: absolute;
   display: block;
-  height: 100%;
   width: 100%;
+  height: 100%;
   background-color: var(--main-text-color);
   transition: transform 0.5s ease-in-out;
   transform: translateX(-100%);
-  position: absolute;
 }
 .button:hover::after {
-  cursor: pointer;
   transform: translateX(0);
+  cursor: pointer;
 }
 .floppy-svg {
+  position: relative;
   z-index: 1;
   width: 21px;
-  position: relative;
   fill: var(--like-button);
   mix-blend-mode: difference;
 }
 
-.dialog_button{
-  grid-template-columns: 21px 1fr;
-  gap: 12px;
-  width: 340px;
-  height: 55px;
-  line-height: 12.6px;
-  font-size: 14px;
+.dialog_button {
+  grid-template-columns: 18px 1fr;
+  gap: 10px;
+  width: 335px;
+  height: 51px;
   margin: 50px auto 103px;
   padding: 15px 18px 14px;
+  font-size: 14px;
+  line-height: 12.6px;
 }
 
 /*- блок лайков ------------------------------------------------- */
 
 /*- Модальное окно ------------------------------------------------- */
-.modal {
-  background-color: var(--main-bg-color);
+.modal:is([open]) {
   border: none;
-  border: 2px solid var(--main-text-color);
-  color: var(--main-text-color);
-  font-family: var(--accent-font), sans-serif;
-  text-transform: uppercase;
-  font-size: 14px;
+  outline: 2px solid var(--main-text-color);
   padding: 0px;
+  color: var(--main-text-color);
+  font-family: var(--accent-font), fantasy;
+  font-size: 14px;
+  text-transform: uppercase;
+  background-color: var(--main-bg-color);
+  z-index: 1;
 }
 .modal .content {
   display: grid;
   grid-template-columns: 39px 1fr;
-  gap: 20px;
-  align-content: center;
   justify-content: center;
+  align-content: center;
+  gap: 20px;
 }
-.modal svg{
-  color: var(--main-text-color);
+.modal svg {
+  position: relative;
   z-index: 1;
   width: 39px;
-  position: relative;
-}
-.modal {
   color: var(--main-text-color);
-  z-index: 1;
-
 }
-
 
 .modal::backdrop {
   background-color: rgb(0, 0, 0, 0.75);
 }
 
 .modal button {
-  text-transform: uppercase;
-  height: 38px;
   width: 293px;
+  height: 38px;
   padding: 0px;
+  text-transform: uppercase;
 }
 
 .modal:is([open]) form {
   display: grid;
   gap: 30px;
   align-self: center;
-
 }
 
 .modal:is([open]) .floppy {
-  width: 39px; 
   align-self: center;
+  width: 39px;
   fill: var(--main-text-color);
 }
 
@@ -382,9 +382,9 @@ article .illustration{
 /*- Фильтры ------------------------------------------------- */
 
 .filter-saturate-rotate {
-  filter: saturate(230%) hue-rotate(200deg);
+  filter: blur(2px) saturate(230%) hue-rotate(200deg);
+  clip-path: inset(0);
 }
-
 
 .filter-saturate {
   filter: saturate(120%);
@@ -392,23 +392,86 @@ article .illustration{
 
 .filter-blur {
   filter: blur(4px);
+  clip-path: inset(0);
 }
-
 
 .filter-sepia-opacity-blur {
-  filter: sepia(0.45) opacity(0.3) blur(5px) ;
+  filter: sepia(0.45) opacity(0.3);
 }
 
-
-.filter-hue-rotate{
+.filter-hue-rotate {
   filter: hue-rotate(20deg);
 }
 .filter-contrast {
   filter: contrast(40%);
 }
-.filter-invert-blur {
-  filter: invert(100%) blur(5px);
+.filter-invert {
+  filter: invert(90%);
 }
 .filter-brightness-grayscale {
-  filter: brightness(30%) grayscale(80);
+  filter: brightness(20%) grayscale(100);
+}
+
+@media (width < 376px) {
+  .header {
+    width: 100%;
+  }
+
+  main li {
+    width: 100vw;
+  }
+
+  .illustration {
+    display: block;
+    max-width: 375px;
+    max-height: 375px;
+  }
+  article h2 {
+    display: block;
+    padding-right: 20px;
+  }
+
+  .floppy-svg {
+    width: 28px;
+  }
+  .modal svg {
+    position: relative;
+    z-index: 1;
+    width: 39px;
+  }
+
+  .modal button {
+    width: 257px;
+  }
+  .dialog_button {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    width: 306px;
+    height: 80px;
+  }
+  .dialog_button svg {
+    height: 28px;
+    margin: 0px auto 0px;
+  }
+  .watermark {
+    right: 13px;
+  }
+  .theme-menu__list {
+    gap: 4px;
+  }
+  h2{
+    padding: 4px 0;
+    line-height: 1.4em;
+  }
+  article .card__like-button {
+    line-height: 34px;
+    block-size: 36px;
+    inline-size: 130px;
+  }
+  .modal {
+    width: 341px;
+    border: none;
+  }
 }
